--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "dependencies": {
     "@gsap/react": "^2.1.1",
     "@remixicon/react": "^4.2.0",
+    "@tailwindcss/typography": "^0.5.15",
+    "appwrite": "^15.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0"
+    "react-markdown": "^9.0.1",
+    "react-router-dom": "^6.23.0",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
