--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.23.0",
+    "rehype-highlight": "^7.0.1",
     "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
